 *
 *   You should have received a copy of the GNU General Public License
 *   along with this program; if not, write to the Free Software
 *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 */

I started this file to keep track of changes made in hybrid-6,
beginning with b37.  We are in VERY HIGH SPEED development mode,
so it's important to keep track of this. =)

version hybrid-6-b39	20-Jan-1999
* sanity test m_gline parc argument count, older hybrid-5 servers
  with buggy GLINE can core new hybrid-6 correct GLINE code 
* Forward the GLINE even if GLINE is not defined on this server.
  No point having GLINE for opers on a HUB for example, and servers
  that wish to opt out of others placing GLINE's can still relay it.
* keep a link list of 0 member channels created on a split
  if PRESERVE_CHANNEL_ON_SPLIT or NO_JOIN_ON_SPLIT is defined
  remove all 0 member channels when split heals
  redid NO_JOIN_ON_SPLIT to only care about channels that once existed.

-Dianora
	
version hybrid-6-b38	20-Jan-1999

* bumped version up to b38
* fixed bugs with "reason" code in ircd.c
* duplicated config.h to config.h.dist	
* fixed bug in ircd.c with SEND_FAKE_KILL_TO_CLIENT
  if IDLE_CHECK not defined
* Added new defines to m_info() in s_serv.c
* Started adding code to deal with user@IP I lines to s_conf.c

-Dianora
	
============================================================================
|        Mon Jan 18 00:13:39 PST 1999	Jake Khuon <khuon@GCtr.Net>        |
============================================================================

* b37mod1

[1] Added the following options:

	IDLE_IGNORE
		When used in conjunction with IDLE_CHECK will prevent the
	        server from idle'ing clients connected from the listed IP#s. 
	        This should probably be moved into a conf file entry at
	        some point in the future.
	
	SEND_FAKE_KILL_TO_CLIENT
		Make the client think it's being KILL'ed.  This was
		originally intended to prevent clients from reconnecting to